--- a/static/index.html
+++ b/static/index.html
@@ -8,23 +8,7 @@
   </head>
 
   <body>
-
-    <entry></entry>
-    <modal></modal>
-    <message></message>
-
-    <script src="entry.riot" type="riot"></script>
-    <script src="modal.riot" type="riot"></script>
-    <script src="message.riot" type="riot"></script>
-    <script src="/riot+compiler.min.js"></script>
-
-    <script>
-      riot.compile().then(async () => {
-        riot.mount('entry', {
-          title: 'webhooks',
-          items: [],
-        }, 'entry')
-      })
-    </script>
+      <p><a href="hook.html">hook</a></p>
+      <p><a href="cron.html">cron</a></p>
   </body>
 </html>
