--- a/static/cron.html
+++ b/static/cron.html
@@ -21,7 +21,7 @@
     <script>
       riot.compile().then(async () => {
         riot.mount('cron', {
-          title: 'webhooks',
+          title: 'Webhook - cron',
           items: [],
         })
       })
