--- a/static/hook.html
+++ b/static/hook.html
@@ -21,7 +21,7 @@
     <script>
       riot.compile().then(async () => {
         riot.mount('hook', {
-          title: 'webhooks',
+          title: 'Webhook - hook',
           items: [],
         })
       })
