--- a/static/index.html
+++ b/static/index.html
@@ -8,7 +8,10 @@
   </head>
 
   <body>
-      <p><a href="hook.html">hook</a></p>
-      <p><a href="cron.html">cron</a></p>
+    <h3><a href="/">Webhook</a></h3>
+    <div id="memu">
+      <p><a href="hook.html">Hook</a> Call the webhook endpoint if it matches the nostr post.</p>
+      <p><a href="cron.html">Cron</a> Calls the webhook endpoint at the specified time.</p>
+    </div>
   </body>
 </html>
