--- a/static/index.html
+++ b/static/index.html
@@ -9,7 +9,7 @@
 
   <body>
     <h3><a href="/">Webhook</a></h3>
-    <div id="memu">
+    <div id="menu">
       <p><a href="hook.html">Hook</a> Call the webhook endpoint if it matches the nostr post.</p>
       <p><a href="cron.html">Cron</a> Calls the webhook endpoint at the specified time.</p>
     </div>
