--- a/static/hook.html
+++ b/static/hook.html
@@ -11,10 +11,12 @@
 
     <hook></hook>
     <hook-modal></hook-modal>
+    <confirm></confirm>
     <message></message>
 
     <script src="hook.riot" type="riot"></script>
     <script src="hook-modal.riot" type="riot"></script>
+    <script src="confirm.riot" type="riot"></script>
     <script src="message.riot" type="riot"></script>
     <script src="/riot+compiler.min.js"></script>
 
