--- a/static/task.html
+++ b/static/task.html
@@ -11,10 +11,12 @@
 
     <task></task>
     <task-modal></task-modal>
+    <confirm></confirm>
     <message></message>
 
     <script src="task.riot" type="riot"></script>
     <script src="task-modal.riot" type="riot"></script>
+    <script src="confirm.riot" type="riot"></script>
     <script src="message.riot" type="riot"></script>
     <script src="/riot+compiler.min.js"></script>
 
