--- a/static/index.html
+++ b/static/index.html
@@ -9,9 +9,12 @@
 
   <body>
     <h3><a href="/">Webhook</a></h3>
-    <div id="menu">
+    <div class="menu">
       <p><a href="hook.html">Hook</a> Call the webhook endpoint if it matches the nostr post.</p>
       <p><a href="task.html">Task</a> Calls the webhook endpoint at the specified time.</p>
+    </div>
+    <div class="description">
+      <p><img src="description.png" /></p>
     </div>
   </body>
 </html>
