--- a/static/task.html
+++ b/static/task.html
@@ -13,11 +13,13 @@
     <task-modal></task-modal>
     <confirm></confirm>
     <message></message>
+    <loading></loading>
 
     <script src="task.riot" type="riot"></script>
     <script src="task-modal.riot" type="riot"></script>
     <script src="confirm.riot" type="riot"></script>
     <script src="message.riot" type="riot"></script>
+    <script src="loading.riot" type="riot"></script>
     <script src="/riot+compiler.min.js"></script>
 
     <script>
