--- a/static/hook.html
+++ b/static/hook.html
@@ -13,11 +13,13 @@
     <hook-modal></hook-modal>
     <confirm></confirm>
     <message></message>
+    <loading></loading>
 
     <script src="hook.riot" type="riot"></script>
     <script src="hook-modal.riot" type="riot"></script>
     <script src="confirm.riot" type="riot"></script>
     <script src="message.riot" type="riot"></script>
+    <script src="loading.riot" type="riot"></script>
     <script src="/riot+compiler.min.js"></script>
 
     <script>
