--- a/static/hook.html
+++ b/static/hook.html
@@ -5,6 +5,7 @@
     <title>Webhooks</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="stylesheet" href="app.css">
+    <script type="text/javascript" src="md5.js"></script>
   </head>
 
   <body>
