--- a/static/index.html
+++ b/static/index.html
@@ -12,6 +12,7 @@
     <div class="menu">
       <p><a href="hook.html">Hook</a> Call the webhook endpoint if it matches the nostr post.</p>
       <p><a href="task.html">Task</a> Calls the webhook endpoint at the specified time.</p>
+      <p><a href="proxy.html">Proxy</a> Proxy event via webhook.</p>
     </div>
     <div class="description">
       <p><img src="description.png" /></p>
