--- a/static/index.html
+++ b/static/index.html
@@ -11,6 +11,7 @@
     <h3><a href="/">Webhook</a></h3>
     <div class="menu">
       <p><a href="hook.html">Hook</a> Call the webhook endpoint if it matches the nostr post.</p>
+      <p><a href="watch.html">Watch</a> Call the webhook endpoint if it matches the nostr updates of metadata.</p>
       <p><a href="task.html">Task</a> Calls the webhook endpoint at the specified time.</p>
       <p><a href="proxy.html">Proxy</a> Proxy event via webhook.</p>
     </div>
