--- a/static/index.html
+++ b/static/index.html
@@ -10,10 +10,10 @@
   <body>
     <h3><a href="/">Webhook</a></h3>
     <div class="menu">
-      <p><a href="hook.html">Hook</a> Call the webhook endpoint if it matches the nostr post.</p>
-      <p><a href="watch.html">Watch</a> Call the webhook endpoint if it matches the nostr updates of metadata.</p>
-      <p><a href="task.html">Task</a> Calls the webhook endpoint at the specified time.</p>
-      <p><a href="proxy.html">Proxy</a> Proxy event via webhook.</p>
+      <p><a href="hook.html">Hook</a> <span>Call the webhook endpoint if it matches the nostr post.</span></p>
+      <p><a href="watch.html">Watch</a> <span>Call the webhook endpoint if it matches the nostr updates of metadata.</span></p>
+      <p><a href="task.html">Task</a> <span>Calls the webhook endpoint at the specified time.</span></p>
+      <p><a href="proxy.html">Proxy</a> <span>Proxy event via webhook.</span></p>
     </div>
     <div class="description">
       <p><img src="description.png" /></p>
