--- a/static/index.html
+++ b/static/index.html
@@ -10,10 +10,10 @@
   <body>
     <h3><a href="/">Webhook</a></h3>
     <div class="menu">
-      <p><a href="hook.html">Hook</a> <span>Call the webhook endpoint if it matches the nostr post.</span></p>
-      <p><a href="watch.html">Watch</a> <span>Call the webhook endpoint if it matches the nostr updates of metadata.</span></p>
-      <p><a href="task.html">Task</a> <span>Calls the webhook endpoint at the specified time.</span></p>
-      <p><a href="proxy.html">Proxy</a> <span>Proxy event via webhook.</span></p>
+      <p><a href="hook.html"><svg class="menu-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M9 3H5a2 2 0 0 0-2 2v4m6-6h10a2 2 0 0 1 2 2v4M9 3v18m0 0h10a2 2 0 0 0 2-2V9M9 21H5a2 2 0 0 1-2-2V9"/></svg> Hook</a> <span>Call the webhook endpoint if it matches the nostr post.</span></p>
+      <p><a href="watch.html"><svg class="menu-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"/><circle cx="12" cy="12" r="3"/></svg> Watch</a> <span>Call the webhook endpoint if it matches the nostr updates of metadata.</span></p>
+      <p><a href="task.html"><svg class="menu-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M12 2l3.09 6.26L22 9.27l-5 4.87 1.18 6.88L12 17.77l-6.18 3.25L7 14.14 2 9.27l6.91-1.01L12 2z"/></svg> Task</a> <span>Calls the webhook endpoint at the specified time.</span></p>
+      <p><a href="proxy.html"><svg class="menu-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M5 12h14"/><path d="M12 5l7 7-7 7"/></svg> Proxy</a> <span>Proxy event via webhook.</span></p>
     </div>
     <div class="description">
       <p><img src="description.png" /></p>
